[package]
name    = "owner-finance-finder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "owner-finance-finder"
path = "src/main.rs"

[dependencies]

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for scraping
reqwest = { version = "0.12", features = ["gzip", "deflate", "cookies"] }

# HTML parser — CSS selectors like BeautifulSoup
scraper = "0.19"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# CORS + static file serving
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding for search queries
urlencoding = "2"

# SQLite — for writing leads into the leadintel DB
rusqlite = { version = "0.31", features = ["bundled"] }

# UUIDs for lead IDs
uuid = { version = "1", features = ["v4"] }
